[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/bg_day.jpg" type="Texture" id=1]
[ext_resource path="res://assets/palms.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/google.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/unknown.png" type="Texture" id=4]
[ext_resource path="res://reso/styles/font48.tres" type="DynamicFont" id=5]
[ext_resource path="res://scripts/StartupScreen.gd" type="Script" id=6]
[ext_resource path="res://assets/icons/loading.png" type="Texture" id=7]
[ext_resource path="res://reso/styles/font24.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/icons/password.png" type="Texture" id=9]
[ext_resource path="res://reso/styles/button_normal.tres" type="StyleBox" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.968627, 0.74902, 1, 0.894118 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.937255, 0.207843, 1, 0.619608 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 8
border_color = Color( 0.631373, 0.101961, 0.541176, 1 )

[sub_resource type="Animation" id=2]
resource_name = "anim"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="StartupScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1344, 0 )
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -283.0
margin_top = -2649.0
margin_right = 2176.0
margin_bottom = 2648.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Tree" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -569.0
margin_right = 384.0
margin_bottom = -21.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="LoginPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 464.0
margin_right = -40.0
margin_bottom = -642.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="LoginPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 52.0
margin_top = 74.0
margin_right = -52.0
margin_bottom = -74.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="LoginPanel/VBoxContainer2"]
margin_right = 536.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 5 )
text = "Sign in options:"
align = 1

[node name="Hbox" type="HBoxContainer" parent="LoginPanel/VBoxContainer2"]
margin_top = 87.0
margin_right = 536.0
margin_bottom = 187.0
custom_constants/separation = 63
alignment = 1

[node name="Anon" type="TextureButton" parent="LoginPanel/VBoxContainer2/Hbox"]
margin_left = 218.0
margin_right = 318.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 6
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Google" type="TextureButton" parent="LoginPanel/VBoxContainer2/Hbox"]
visible = false
margin_left = 299.0
margin_right = 399.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 6
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="EmailPass" type="TextureButton" parent="LoginPanel/VBoxContainer2/Hbox"]
visible = false
margin_left = 381.0
margin_right = 481.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 6
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="SignupPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 464.0
margin_right = -40.0
margin_bottom = -407.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="SignupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 52.0
margin_top = 74.0
margin_right = -52.0
margin_bottom = -74.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="SignupPanel/VBoxContainer2"]
margin_right = 536.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 5 )
text = "Register new:"
align = 1

[node name="Email" type="LineEdit" parent="SignupPanel/VBoxContainer2"]
margin_top = 87.0
margin_right = 536.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
placeholder_text = "Email"

[node name="Pass" type="LineEdit" parent="SignupPanel/VBoxContainer2"]
margin_top = 182.0
margin_right = 536.0
margin_bottom = 247.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
secret = true
placeholder_text = "Password"

[node name="VBoxContainer" type="VBoxContainer" parent="SignupPanel/VBoxContainer2"]
margin_top = 277.0
margin_right = 536.0
margin_bottom = 513.0

[node name="Create" type="Button" parent="SignupPanel/VBoxContainer2/VBoxContainer"]
margin_right = 536.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
text = "Create"

[node name="Cancel" type="Button" parent="SignupPanel/VBoxContainer2/VBoxContainer"]
margin_top = 120.0
margin_right = 536.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
text = "Cancel"

[node name="LoadingIndicator" type="TextureRect" parent="."]
visible = false
margin_left = 290.0
margin_top = 781.0
margin_right = 430.0
margin_bottom = 921.0
rect_rotation = 249.68
rect_pivot_offset = Vector2( 70, 70 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="LoadingIndicator"]
autoplay = "anim"
anims/anim = SubResource( 2 )

[node name="Error" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -331.0
margin_top = 177.0
margin_right = 331.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 8 )
text = "ERROR"
align = 1
autowrap = true

[connection signal="pressed" from="LoginPanel/VBoxContainer2/Hbox/Anon" to="." method="_on_Anon_pressed"]
[connection signal="pressed" from="LoginPanel/VBoxContainer2/Hbox/Google" to="." method="_on_Google_pressed"]
[connection signal="pressed" from="LoginPanel/VBoxContainer2/Hbox/EmailPass" to="." method="_on_EmailPass_pressed"]
[connection signal="pressed" from="SignupPanel/VBoxContainer2/VBoxContainer/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="SignupPanel/VBoxContainer2/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
